syntax = "proto3";

package proto;

import "proto/common.proto";

message GetTagListRequest{
  string name = 1;
  uint32 state = 2;
}

message Tag{
  int64 id = 1;
  string name = 2;
  uint32 state = 3;
}

message GetTagListReply{
  repeated Tag tag = 1;
  Pager pager = 2;
}

service TagService{
  rpc GetTagList(GetTagListRequest)returns(GetTagListReply){};
}
